<resources>
    <string name="app_name">Kapı Panel</string>
    <string name="gun">Day</string>
    <string name="ay">Month</string>
    <string name="yil">Year</string>
    <string name="rakamlari_kullanarak_degistirin">Change the values by using numbers</string>
    <string name="ok_tusu_ile_siradaki_islem">Go to the next transaction by pressing OK button</string>
    <string name="saat"> Hour </string>
    <string name="dakika">Minute</string>
    <string name="no_root_warning">Please check the required transactions and fulfill them</string>
    <string name="aranacak_daire">APARTMENT TO BE CALLED</string>
    <string name="saniye_sonra_kapanacak_1">will close in</string>
    <string name="saniye_sonra_kapanacak_2">seconds</string>
    <string name="saniye_sonra_aranacak_1">will call in</string>
    <string name="saniye_sonra_aranacak_2">seconds</string>
    <string name="saniye_sonra_bastan_baslayacak_1">will restart in</string>
    <string name="saniye_sonra_bastan_baslayacak_2">seconds</string>
    <string name="iptal_icin_geri_tusuna_basin">To cancel, press &quot;Back&quot; button</string>
    <string name="araniyor">Calling</string>
    <string name="blok_no">Block No</string>
    <string name="yedekle">Back Up</string>
    <string name="isleminiz_basari_ile_tamamlandi">İşleminiz Başaı İle Tamamlandı</string>
    <string name="geri_yukle">Reinstall</string>
    <string name="kapi_no">Door No</string>
    <string name="dogru_bilgiler_girildiginden_emin_olun">NOTE: Be sure you entered correct information</string>
    <string name="zaman_ayari">Time Setting</string>
    <string name="cihaz_ayari">Device Setting</string>
    <string name="kapi_sifresini_girin">Enter Door Password</string>
    <string name="zil_paneli">Doorbell panel</string>
    <string name="rehber">PHONE BOOK</string>
    <string name="daire_ara">CALL APARTMENT</string>
    <string name="kapi_ac">OPEN THE DOOR</string>
    <string name="ayarlar">SETTINGS</string>
    <string name="yonetici">Administrator</string>
    <string name="teknik_personel">Technical Staff</string>
    <string name="daire_numarasi_tuslayin">Enter Apartment Number</string>
    <string name="hosgeldiniz">WELCOME</string>
    <string name="daire_aramak_icin_daire_numarasini_girin">ENTER APARTMENT NUMBER TO CALL APARTMENT</string>
    <string name="menuyu_gormek_icin_herhangi_bir_tusa_basin">YOU CAN PRESS ANY KEY TO SEE THE MENU</string>
    <string name="ozet">SUMMARY</string>
    <string name="saat_two_dots">Hour:</string>
    <string name="tarih_two_dots">Date:</string>
    <string name="blok_no_two_dots">Block No:</string>
    <string name="kapi_no_two_dots">Door No:</string>
    <string name="cihaz_bastan_baslatilacaktir">The device will restart.\nCheck your information and continue.</string>
    <string name="otomatik_kurulum">Automatic installation is on. Please do not intervene.</string>
    <string name="bastan_baslat">Restart</string>
    <string name="islem_yapilacak_daireyi_secin">Choose the apartment to be processed</string>
    <string name="sifre">PASSWORD</string>
    <string name="yonetici_sifresini_giriniz">Enter Administrator\'s Password</string>
    <string name="teknik_personel_ayarlari">Technical Staff Settings</string>
    <string name="cihaz_dili">Device Language</string>
    <string name="sifre_ekle">Add Password</string>
    <string name="sifre_sil">Delete Password</string>
    <string name="kart_ekle_rfid">Add Card (RFID)</string>
    <string name="kart_sil_rfid">Delete Card (RFID)</string>
    <string name="simdi_karti_okutun">SCAN THE CARD NOW</string>
    <string name="saniye_sonra_iptal_edilecek_1">will cancel in </string>
    <string name="saniye_sonra_iptal_edilecek_2">seconds</string>
    <string name="silinecek_sifreyi_secin">Choose the password to be deleted</string>
    <string name="dil_secin">Choose Language</string>
    <string name="hatali_tarih">Incorrect Date</string>
    <string name="lutfen_blok_no_girin">Please Enter Block No !!!</string>
    <string name="lutfen_kapi_no_girin">Please Enter Door No !!!</string>
    <string name="blok">Block</string>
    <string name="kapi">Door</string>
    <string name="en_fazla_3_hane_olabilir">Maximum 3 digits</string>
    <string name="blok_no_0_244_arasi">Block No can be betweeen 0-244</string>
    <string name="kapi_no_0_255_arasi">Door No can be between 0-255</string>
    <string name="daire_no">Apartment No</string>
    <string name="teknik_personel_sifresini_girin">Enter Technical Staff Password</string>
    <string name="hatali_sifre">Incorrect Password</string>
    <string name="sifre_alani_eksik">Password Field is Missing</string>
    <string name="sifre_yanlis_veya_eksik">Password is Incorrect or Incomplete</string>
    <string name="hatali_sifre_hakkiniz_doldu">You entered password wrong too many times. Try again later</string>
    <string name="sifre_yanlis">Password is incorrect.</string>
    <string name="deneme_hakkiniz_kaldi">You have ... tries left !!!</string>
    <string name="lutfen_butun_alanlari_doldurun">Please fill all the fields</string>
    <string name="bu_sifre_zaten_bu_daire_icin_kullanimda">This password is already in use for selected apartment</string>
    <string name="sifre_basari_ile_eklendi">Password was added successfully</string>
    <string name="basari_ile_silindi">Deleted successfully</string>
    <string name="islem_iptal_edildi">Transaction cancelled</string>
    <string name="bu_kart_daha_önce_kullanilmis">This card was used before</string>
    <string name="kart_basari_ile_atandi">The Card is assigned successfully</string>
    <string name="henuz_sifre_atanmamis">Password has not yet been assigned</string>
    <string name="sifre_aktif_degil">Password is not Active</string>
    <string name="tarih_ve_saat">Date and Time</string>
    <string name="gorunur_isim">Visible Name</string>
    <string name="cihaz_ismi_basariyla_degistirildi">Device name was changed successfully</string>
    <string name="isim">Name</string>
    <string name="sifre_icin_isim_belirlendi">Name is designated for Password</string>
    <string name="gorevli">Staff</string>
    <string name="arama_reddedildi">Call Denied</string>
    <string name="arama_kabul">Accept Call</string>
    <string name="cevap_vermiyor">Not Responding</string>
    <string name="arama_iptal">Call Cancelled</string>
    <string name="arama_mesgul">Busy</string>
    <string name="daire_numarasi_eksik">Apartment Number Missing</string>
    <string name="daire_kayitli_degil">Such apartment is not registered</string>
    <string name="gorusme_sonlandirildi">Call Ended</string>
    <string name="tekrar_kurulum">Reinstallation</string>
    <string name="kurulum_hatasi">Installation Error</string>
    <string name="kurulum_hatasi_message">An error occurred during installation. Try reinstalling.\n\nIf the problem persists, please contact the firm you bought from.</string>
    <string name="yonlendirme_aramasi">Making a directed call.</string>
    <string name="kritik_hata">Critical Error</string>
    <string name="aradiginiz_cihaz_ulasilmaz_durumda">The device you are calling cannot be reached.</string>
    <string name="mesaj_cihaz_ulasilmaz_durumda">The device you send message cannot be reached.</string>
    <string name="daha_sonra_tekrar_deneyin">Please try again later.</string>
    <string name="video_kayit">Video Recording</string>
    <string name="guvenlik_kayit_mesaj">Due to security reasons, video and voice are recorded.</string>
    <string name="guvenlik">Security</string>
    <string name="baglanti_yapiliyor">Connecting</string>
    <string name="karsilama_metni">Welcome Text</string>
    <string name="gecersiz">Invalid</string>
    <string name="sifirla">Reset</string>
    <string name="sifirla_message">Resets your device and you will need to adjust all the settings from the start.\nNOTE: All data will be lost.</string>
    <string name="cihazi_sifirlamak_icin_emin_misiniz">You are about to reset the device.\n\nAre you sure?</string>
    <string name="kapi_no_sifir_olamaz">Door number cannot be 0</string>
    <string name="tus_sesi">Key Tone</string>
    <string name="kapi_giris_verileri">Door Entry Data</string>
    <string name="zil_paneli_bulunamadi">Bell Panel not found</string>
    <string name="reset_device_message">Complete installation of bell panel first to complete installation. You can complete branch installations after bell panel</string>
    <string name="yon_tusu_ile_siradaki_islem">Go to the next transaction by pressing DIRECTION button</string>
    <string name="kart_kullaranak">By card</string>
    <string name="sifre_kullanarak">By password</string>
    <string name="daire_tarafindan">By apartment</string>
    <string name="ip_info">IP Info</string>
    <string name="karti_okutarak_sil">Delete RFID Card by scanning</string>
    <string name="kart_basari_ile_silindi">Card was successfully deleted</string>
    <string name="cihaz_tipini_seciniz">Select Device Type</string>
    <string name="site_zil_paneli">Site Bell Panel</string>
    <string name="devam_icin_okay">Press OK to continue</string>
    <string name="initialize_title_1">Setup settings for</string>
    <string name="initialize_title_2"></string>
    <string name="uyari_text">* Enter the site bell panel number in the project planning phase</string>
    <string name="kat_no">Floor No:</string>
    <string name="guncelleme_basladi_otomatik_yapilacaktir">Directory update started. It will be done automatically.</string>
    <string name="cihaz_izinsiz_yerinden_cikartildi">THE DEVICE HAS BEEN REMOVED WITHOUT PERMISSION</string>
    <string name="guvenlik_birimlerine_haber_verildi">Security Units were Informed</string>
    <string name="veri_testi_basarili">Data Test completed successfully.\n\nThe device will restart in a few seconds.</string>
    <string name="veri_testi_basarili_degil">Data Test failed.\n\nPlease hand over your device to your administrator.</string>
    <string name="veri_testi_yapiliyor">Data Test is in progress\nPlease Wait</string>
    <string name="test_ekrani_baslik">Please perform articles below in order to test the device</string>
    <string name="ekran_testi">Screen Test</string>
    <string name="sina">Test</string>
    <string name="kamera_testi">Camera Test</string>
    <string name="ses_testi">Sound Test</string>
    <string name="led_testi">LED Test</string>
    <string name="mikrofon_testi">Microphone Test</string>
    <string name="video_testi">Video Test</string>
    <string name="sistemi_baslat">Start the System</string>
    <string name="testi_bitir">End Test</string>
    <string name="kirmizi">Red</string>
    <string name="yesil">Green</string>
    <string name="mavi">Blue</string>
    <string name="hayir">No</string>
    <string name="kamera_calisiyor_mu">Is the Camera working?</string>
    <string name="evet_calisiyor">Yes, it is working</string>
    <string name="ses_calisiyor_mu">Is sound working?</string>
    <string name="calan_sesi_duyuyor_musunuz">Do you hear the sound which is played?</string>
    <string name="konusma_ses_seviyesi">Konuşma Sesi Seviyesi</string>
    <string name="ses_seviyesi">Sound Level</string>
    <string name="led_calisiyor_mu">Does the LED light work?</string>
    <string name="mikrofon_calisiyor_mu">Is microphone working?</string>
    <string name="ses_kaydedin">Record your voice by pushing the Lock button at lower left and listen afterwards.</string>
    <string name="kayit_5_saniye_surer">Record lasts 5 seconds and when it ends, it plays the recorded sound.</string>
    <string name="test_tamamlandi">Device test complete.\n\nYou may start your device.</string>
    <string name="tekrar_test">Retest</string>
    <string name="oynayan_videoda_bir_problem_var_mi">Is there any problem with the video that is played?</string>
    <string name="video_calisiyor_mu">Is the video working?</string>
    <string name="uygulamayi_guncelle">Update Application</string>
</resources>