<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/ozet"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:fontFamily="@font/bold"
            android:gravity="right"
            android:text="@string/saat_two_dots"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/summarySaat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight=".50"
            android:fontFamily="@font/regular"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:fontFamily="@font/bold"
            android:gravity="right"
            android:text="@string/tarih_two_dots"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/summaryTarih"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight=".50"
            android:fontFamily="@font/regular"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/summaryBlokNoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:fontFamily="@font/bold"
            android:gravity="right"
            android:text="@string/blok_no_two_dots"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/summaryBlokNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight=".50"
            android:fontFamily="@font/regular"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/summaryKapiNoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:fontFamily="@font/bold"
            android:gravity="right"
            android:text="@string/kapi_no_two_dots"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/summaryKapiNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight=".50"
            android:fontFamily="@font/regular"
            android:textColor="@color/black" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/cihaz_bastan_baslatilacaktir"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>