<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/aranacak_daire"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/countdownDialogDaireName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/saniye_sonra_aranacak_1"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/countdownDialogRemainingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:textSize="21sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/saniye_sonra_aranacak_2"
                android:textColor="@color/black"
                android:textSize="21sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/guvenlik_kayit_mesaj"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/iptal_icin_geri_tusuna_basin"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

<!--    <com.camerakit.CameraKitView-->
<!--        android:id="@+id/cameraKitView"-->
<!--        android:layout_width="75dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:adjustViewBounds="true"-->
<!--        android:visibility="invisible"-->
<!--        app:camera_facing="back"-->
<!--        app:camera_focus="continuous"-->
<!--        app:camera_imageJpegQuality="100"-->
<!--        app:camera_imageMegaPixels="2.0"-->
<!--        app:camera_permissions="camera" />-->

</RelativeLayout>